umol-io/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@opensmiles_rhea_bond_stereo_13.smiles.snap
---
source: umol-io/tests/smiles_parsing/mod.rs
assertion_line: 271
expression: results
---
expected_category: opensmiles
category: opensmiles
opensmiles:
  success: true
  summary:
    sum_formula: C18O4-
    atom_count: 22
    bond_count: 21
